--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
